--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-    <link rel="icon"
-      type="image/png"
-      href="fav-icon.png">
+    <title>z-index example with javascript</title>
+    <link rel="icon" type="image/png" href="fav-icon.png">
     <style>
-        div,img {
+        div,
+        img {
             border: 1px solid black;
             background-color: red;
             height: 150px;
